fixed valign line

--- a/src/blocks/components/main-menu/_main-menu.scss
+++ b/src/blocks/components/main-menu/_main-menu.scss
@@ -45,12 +45,9 @@
 
 	&__header {
 		display: flex;
+		position: relative;
 		align-items: center;
 		padding: 18px 23px 45px;
-	}
-
-	&__body {
-		margin-bottom: 245px;
 	}
 
 	&__list {
@@ -165,6 +162,7 @@
 		display: flex;
 		flex-direction: column;
 		justify-content: space-between;
+		margin: auto 0;
 
 		.main-menu__link {
 			margin-right: 7px;
